; ModuleID = '/home/carl/AnghaBench/reactos/sdk/tools/hhpcomp/chmc/extr_chmc.c_chmc_control_data_init.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/tools/hhpcomp/chmc/extr_chmc.c_chmc_control_data_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.chmcLzxcControlData = type { i32, i32, i32, i32, i32, i64, i32 }

@.str = private unnamed_addr constant [5 x i8] c"LZXC\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @chmc_control_data_init(%struct.chmcLzxcControlData* %0) #0 {
  %2 = alloca %struct.chmcLzxcControlData*, align 8
  store %struct.chmcLzxcControlData* %0, %struct.chmcLzxcControlData** %2, align 8
  %3 = load %struct.chmcLzxcControlData*, %struct.chmcLzxcControlData** %2, align 8
  %4 = getelementptr inbounds %struct.chmcLzxcControlData, %struct.chmcLzxcControlData* %3, i32 0, i32 0
  store i32 6, i32* %4, align 8
  %5 = load %struct.chmcLzxcControlData*, %struct.chmcLzxcControlData** %2, align 8
  %6 = getelementptr inbounds %struct.chmcLzxcControlData, %struct.chmcLzxcControlData* %5, i32 0, i32 6
  %7 = load i32, i32* %6, align 8
  %8 = call i32 @memcpy(i32 %7, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 4)
  %9 = load %struct.chmcLzxcControlData*, %struct.chmcLzxcControlData** %2, align 8
  %10 = getelementptr inbounds %struct.chmcLzxcControlData, %struct.chmcLzxcControlData* %9, i32 0, i32 1
  store i32 2, i32* %10, align 4
  %11 = load %struct.chmcLzxcControlData*, %struct.chmcLzxcControlData** %2, align 8
  %12 = getelementptr inbounds %struct.chmcLzxcControlData, %struct.chmcLzxcControlData* %11, i32 0, i32 2
  store i32 2, i32* %12, align 8
  %13 = load %struct.chmcLzxcControlData*, %struct.chmcLzxcControlData** %2, align 8
  %14 = getelementptr inbounds %struct.chmcLzxcControlData, %struct.chmcLzxcControlData* %13, i32 0, i32 3
  store i32 2, i32* %14, align 4
  %15 = load %struct.chmcLzxcControlData*, %struct.chmcLzxcControlData** %2, align 8
  %16 = getelementptr inbounds %struct.chmcLzxcControlData, %struct.chmcLzxcControlData* %15, i32 0, i32 4
  store i32 1, i32* %16, align 8
  %17 = load %struct.chmcLzxcControlData*, %struct.chmcLzxcControlData** %2, align 8
  %18 = getelementptr inbounds %struct.chmcLzxcControlData, %struct.chmcLzxcControlData* %17, i32 0, i32 5
  store i64 0, i64* %18, align 8
  ret void
}

declare dso_local i32 @memcpy(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
